Fix indicator margins offcenter

--- a/static/css/swizzin.css
+++ b/static/css/swizzin.css
@@ -40,7 +40,6 @@ a[post=true] {
   width: 25px;
   display: inline-block;
   border-radius: 50%;
-  margin-right: 5px
 }
 
 .logo {
